[package]
name = "bend-lang"
description = "A high-level, massively parallel programming language"
license = "Apache-2.0"
version = "0.2.36"
edition = "2021"
rust-version = "1.77"
exclude = ["tests/"]

[lib]
name = "bend"
path = "src/lib.rs"

[[bin]]
name = "bend"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true

[features]
default = ["cli", "manager"]
manager = ["toml_edit", "git2", "semver"]
cli = ["dep:clap"]

[dependencies]
TSPL = "0.0.12"
clap = { version = "4.4.1", features = ["derive"], optional = true }
highlight_error = "0.1.1"
hvm = "=2.0.19"
indexmap = "2.2.3"
interner = "0.2.1"
itertools = "0.11.0"
loaned = "0.1.0"
stacker = "0.1"
toml_edit = { version = "0.22", optional = true }
git2 = { version = "0.19", optional = true }
semver =  { version = "1.0", optional = true }

[dev-dependencies]
insta = "1.34.0"
stdext = "0.3.1"
walkdir = "2.3.3"

[profile.test]
opt-level = 2
