[package]
name = "bend-lang"
description = "A high-level, massively parallel programming language"
license = "Apache-2.0"
version = "0.2.37-alpha.1"
edition = "2021"
rust-version = "1.74"
exclude = ["tests/"]

[lib]
name = "bend"
path = "src/lib.rs"

[[bin]]
name = "bend"
path = "src/main.rs"
required-features = ["cli"]

[profile.release]
lto = true

[features]
default = ["cli"]
cli = ["dep:clap"]

[dependencies]
TSPL = "0.0.13"
clap = { version = "4.4.1", features = ["derive"], optional = true }
highlight_error = "0.1.1"
hvm = "=2.0.22"
indexmap = "2.2.3"
interner = "0.2.1"
itertools = "0.11.0"
loaned = "0.1.0"
stacker = "0.1"

[dev-dependencies]
insta = "1.34.0"
stdext = "0.3.1"
walkdir = "2.3.3"

[profile.test]
opt-level = 2
